--- a/about_us.html
+++ b/about_us.html
@@ -1,73 +1,92 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-<link rel="stylesheet" href="css/main.css">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>INICIO</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>INICIO</title>
 </head>
 
-<body>	
-	<header>
-	
-		<div class="top_bar col-12"></div>
-		
-		<div class="bottom_bar col-12">
-		
-			<div class="logo_area col-3">
-			
-				<img src="img/logo.png" alt="logo">
-				
-			</div>
-			<div id="l_menu_area" class="menu_area col-9">
-			
-				<a class="btn_inicio" href="index.html"><h6>INICIO</h6></a>
-				<a class="btn_servicios" href="services.html"><h6>SERVICIOS</h6></a>
-				<a class="btn_quienes_somos" href="about_us.html"><h6>QUIENES SOMOS</h6></a>
-				<a class="btn_preguntas hide" href=""><h6>PREGUNTAS</h6></a>
-				<a class="btn_contacto" href="contact.html"><h6>CONTACTO</h6></a>
-				<a class="btn_staff hide" href=""><h6>NUESTRO STAFF</h6></a>
-				<a class="btn_casos hide" href=""><h6>NUESTROS CASOS</h6></a>
+<body>
+    <header>
 
-			
-			</div>
-			<div id="s_menu_area" class="menu_area col-9">
-			
-				<div class="dropdown">
-				   <div class="burger_menu" id="s_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
-				   </div>
-				   <div class="dropdown-menu" aria-labelledby="s_menu">
-					  <button class="dropdown-item" type="button" onClick="location.href='index.html'"><h3>INICIO</h3></button>
-					  <button class="dropdown-item" type="button" onClick="location.href='services.html'"><h3>SERVICIOS</h3></button>
-					  <button class="dropdown-item" type="button" onClick="location.href='about_us.html'"><h3>QUIENES SOMOS</h3></button>
-					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>PREGUNTAS</h3></button>
-					  <button class="dropdown-item" type="button" onClick="location.href='contact.html'"><h3>CONTACTO</h3></button>
-					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTRO STAFF</h3></button>
-					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTROS CASOS</h3></button>
-				   </div>
-				</div>
-				
-			</div>
-			
-		</div>
-		
-	</header>
+        <div class="top_bar col-12"></div>
 
-	<div id="about_us_section">
-		<img class="w-100 background" src="img/asset_1.jpg" alt="background">
-		<div class="w-100 white_filter"></div>
-		<div id="text_container">
-			<h1 class="about_us_title">Quiénes Somos</h1>
-			<p class="about_us_text">Clarity es un laboratorio de Radiología, dedicado al empleo de tecnología avanzada en el procesado de imágenes, con inteligencia artificial (Synapse 3D). Se obtienen reconstrucciones tridimensionales impecables, logrando separar los órganos y lesiones tumorales, para poder realizar distintos análisis como volumetrías (calcular el tamaño de un tumor y el órgano que lo contiene), planeamiento quirúrgico (hacer cortes dirigidos en los órganos y territorios vasculares), comparaciones de seguimiento oncológicos (determinar si hay crecimiento de las lesiones tumores en distintos órganos, cuando se tienen estudios anteriores), endoscopia virtual, entre otras herramientas. Clarity va a permitir una mejor compresión de la enfermedad y la anatomía por parte del medico tratante, sea para cirugía o seguimiento.
-			<br>
-			Nuestro equipo esta conformado por médicos especialistas con gran expertise en su campo, así como tecnólogos familiarizados con el manejo avanzado de imágenes. Nuestra meta es poner al alcance de los pacientes tecnología de punta para mejorar el manejo por parte del medico tratante.</p>
-		</div>
-	</div>
-	
-	
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+        <div class="bottom_bar col-12">
+
+            <div class="logo_area col-3">
+
+                <img src="img/logo.png" alt="logo">
+
+            </div>
+            <div id="l_menu_area" class="menu_area col-9">
+
+                <a class="btn_inicio" href="index.html">
+                    <h6>INICIO</h6>
+                </a>
+                <a class="btn_servicios" href="services.html">
+                    <h6>SERVICIOS</h6>
+                </a>
+                <a class="btn_quienes_somos" href="about_us.html">
+                    <h6>QUIENES SOMOS</h6>
+                </a>
+                <a class="btn_preguntas hide" href="">
+                    <h6>PREGUNTAS</h6>
+                </a>
+                <a class="btn_contacto" href="contact.html">
+                    <h6>CONTACTO</h6>
+                </a>
+                <a class="btn_staff hide" href="">
+                    <h6>NUESTRO STAFF</h6>
+                </a>
+                <a class="btn_casos hide" href="">
+                    <h6>NUESTROS CASOS</h6>
+                </a>
+
+
+            </div>
+            <div id="s_menu_area" class="menu_area col-9">
+
+                <div class="dropdown">
+                    <div class="burger_menu" id="s_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </div>
+                    <div class="dropdown-menu dropdownmenu" aria-labelledby="s_menu">
+                        <button class="dropdown-item dropdownmenuitem" type="button" onClick="location.href='index.html'"><h3>INICIO</h3></button>
+                        <button class="dropdown-item dropdownmenuitem" type="button" onClick="location.href='services.html'"><h3>SERVICIOS</h3></button>
+                        <button class="dropdown-item dropdownmenuitem" type="button" onClick="location.href='about_us.html'"><h3>QUIENES SOMOS</h3></button>
+                        <button class="dropdown-item dropdownmenuitem hide" type="button" onClick="location.href='index.html'"><h3>PREGUNTAS</h3></button>
+                        <button class="dropdown-item dropdownmenuitem" type="button" onClick="location.href='contact.html'"><h3>CONTACTO</h3></button>
+                        <button class="dropdown-item dropdownmenuitem hide" type="button" onClick="location.href='index.html'"><h3>NUESTRO STAFF</h3></button>
+                        <button class="dropdown-item dropdownmenuitem hide" type="button" onClick="location.href='index.html'"><h3>NUESTROS CASOS</h3></button>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </header>
+
+    <div id="about_us_section">
+        <img class="w-100 background" src="img/asset_1.jpg" alt="background">
+        <div class="w-100 white_filter"></div>
+        <div id="text_container">
+            <h1 class="about_us_title">Quiénes Somos</h1>
+            <p class="about_us_text">Clarity es un laboratorio de Radiología, dedicado al empleo de tecnología avanzada en el procesado de imágenes, con inteligencia artificial (Synapse 3D). Se obtienen reconstrucciones tridimensionales impecables, logrando separar los órganos
+                y lesiones tumorales, para poder realizar distintos análisis como volumetrías (calcular el tamaño de un tumor y el órgano que lo contiene), planeamiento quirúrgico (hacer cortes dirigidos en los órganos y territorios vasculares), comparaciones
+                de seguimiento oncológicos (determinar si hay crecimiento de las lesiones tumores en distintos órganos, cuando se tienen estudios anteriores), endoscopia virtual, entre otras herramientas. Clarity va a permitir una mejor compresión de
+                la enfermedad y la anatomía por parte del medico tratante, sea para cirugía o seguimiento.
+                <br> Nuestro equipo esta conformado por médicos especialistas con gran expertise en su campo, así como tecnólogos familiarizados con el manejo avanzado de imágenes. Nuestra meta es poner al alcance de los pacientes tecnología de punta
+                para mejorar el manejo por parte del medico tratante.</p>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
+
 </html>
