--- a/contact.html
+++ b/contact.html
@@ -1,100 +1,116 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-<link rel="stylesheet" href="css/main.css">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>CONTACTO</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>CONTACTO</title>
 </head>
 
 <body>
 
-	<header>
-	
-		<div class="top_bar col-12"></div>
-		
-		<div class="bottom_bar col-12">
-		
-			<div class="logo_area col-3">
-			
-				<img src="img/logo.png" alt="logo">
-				
-			</div>
-			<div id="l_menu_area" class="menu_area col-9">
-			
-				<a class="btn_inicio" href="index.html"><h6>INICIO</h6></a>
-				<a class="btn_servicios" href="services.html"><h6>SERVICIOS</h6></a>
-				<a class="btn_quienes_somos" href="about_us.html"><h6>QUIENES SOMOS</h6></a>
-				<a class="btn_preguntas hide" href=""><h6>PREGUNTAS</h6></a>
-				<a class="btn_contacto" href="contact.html"><h6>CONTACTO</h6></a>
-				<a class="btn_staff hide" href=""><h6>NUESTRO STAFF</h6></a>
-				<a class="btn_casos hide" href=""><h6>NUESTROS CASOS</h6></a>
+    <header>
 
-			
-			</div>
-			<div id="s_menu_area" class="menu_area col-9">
-			
-				<div class="dropdown">
-				   <div class="burger_menu" id="s_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
-				   </div>
-				   <div class="dropdown-menu" aria-labelledby="s_menu">
-					  <button class="dropdown-item" type="button" onClick="location.href='index.html'"><h3>INICIO</h3></button>
-					  <button class="dropdown-item" type="button" onClick="location.href='services.html'"><h3>SERVICIOS</h3></button>
-					  <button class="dropdown-item" type="button" onClick="location.href='about_us.html'"><h3>QUIENES SOMOS</h3></button>
-					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>PREGUNTAS</h3></button>
-					  <button class="dropdown-item" type="button" onClick="location.href='contact.html'"><h3>CONTACTO</h3></button>
-					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTRO STAFF</h3></button>
-					  <button class="dropdown-item hide" type="button" onClick="location.href='index.html'"><h3>NUESTROS CASOS</h3></button>
-				   </div>
-				</div>
-				
-			</div>
-			
-		</div>
-		
-	</header>
+        <div class="top_bar col-12"></div>
 
-	<div id="contact_section">
-		<div id="contact_banner">
-			<img class="banner" src="img/Asset 1.png" alt="banner">
-			<div class="w-100 white_filter"></div>
-			<div class="title_container">
-				<h1 class="title">Contacto</h1>
-			</div>
-		</div>
-		<div id="contact_container">
-			<form class="contact_form" action="" method="post">
-				<h2 class="form_title" for="">ENVIAR UN CORREO</h2>
-				<div style="width: 100%; margin-bottom: 1.5rem;">
-					<input class="name_input" type="text" placeholder="Nombre" required>
-					<input class="name_input" type="email" placeholder="Correo" required>
-				</div>
-				<input class="asunto_input" type="text" placeholder="Asunto" required>
-				<textarea class="text_input" type="text" placeholder="Escribe tu mensaje..." required></textarea>
-				<button class="button_form">ENVIAR</button>
-			</form>
-			<div class="info_container">
-				<p>TELEFONOS</p>
-				<p style="margin-bottom: 0.1rem;">8888-8888</p>
-				<p style="margin-bottom: 1.7rem;">7777-7777</p>
-				<p>DIRECCION</p>
-				<p style="margin-bottom: 0.1rem;">xxxxxxxxxxxxxxxxxxxxx</p>
-				<p style="margin-bottom: 1.7rem;">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-				<p>HORAS DE ATENCION</p>
-				<p style="margin-bottom: 0.1rem;">Lunes - Viernes: 7am - 6pm</p>
-				<p style="margin-bottom: 0.1rem;">Sábados: 7am - 1pm</p>
-				<p style="margin-bottom: 1.7rem;">Domingos: cerrado.</p>
-				<div class="social_container">
-					<a href=""><img class="social_img" src="img/instagram.png" alt=""></a>
-					<a href=""><img class="social_img" src="img/facebook.png" alt=""></a>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+        <div class="bottom_bar col-12">
+
+            <div class="logo_area col-3">
+
+                <img src="img/logo.png" alt="logo">
+
+            </div>
+            <div id="l_menu_area" class="menu_area col-9">
+
+                <a class="btn_inicio" href="index.html">
+                    <h6>INICIO</h6>
+                </a>
+                <a class="btn_servicios" href="services.html">
+                    <h6>SERVICIOS</h6>
+                </a>
+                <a class="btn_quienes_somos" href="about_us.html">
+                    <h6>QUIENES SOMOS</h6>
+                </a>
+                <a class="btn_preguntas hide" href="">
+                    <h6>PREGUNTAS</h6>
+                </a>
+                <a class="btn_contacto" href="contact.html">
+                    <h6>CONTACTO</h6>
+                </a>
+                <a class="btn_staff hide" href="">
+                    <h6>NUESTRO STAFF</h6>
+                </a>
+                <a class="btn_casos hide" href="">
+                    <h6>NUESTROS CASOS</h6>
+                </a>
+
+
+            </div>
+            <div id="s_menu_area" class="menu_area col-9">
+
+                <div class="dropdown">
+                    <div class="burger_menu" id="s_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </div>
+                    <div class="dropdown-menu dropdownmenu" aria-labelledby="s_menu">
+                        <button class="dropdown-item dropdownmenuitem" type="button" onClick="location.href='index.html'"><h3>INICIO</h3></button>
+                        <button class="dropdown-item dropdownmenuitem" type="button" onClick="location.href='services.html'"><h3>SERVICIOS</h3></button>
+                        <button class="dropdown-item dropdownmenuitem" type="button" onClick="location.href='about_us.html'"><h3>QUIENES SOMOS</h3></button>
+                        <button class="dropdown-item dropdownmenuitem hide" type="button" onClick="location.href='index.html'"><h3>PREGUNTAS</h3></button>
+                        <button class="dropdown-item dropdownmenuitem" type="button" onClick="location.href='contact.html'"><h3>CONTACTO</h3></button>
+                        <button class="dropdown-item dropdownmenuitem hide" type="button" onClick="location.href='index.html'"><h3>NUESTRO STAFF</h3></button>
+                        <button class="dropdown-item dropdownmenuitem hide" type="button" onClick="location.href='index.html'"><h3>NUESTROS CASOS</h3></button>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </header>
+
+    <div id="contact_section">
+        <div id="contact_banner">
+            <img class="banner" src="img/Asset 1.png" alt="banner">
+            <div class="w-100 white_filter"></div>
+            <div class="title_container">
+                <h1 class="title">Contacto</h1>
+            </div>
+        </div>
+        <div id="contact_container">
+            <form class="contact_form" action="" method="post">
+                <h2 class="form_title" for="">ENVIAR UN CORREO</h2>
+                <div style="width: 100%; margin-bottom: 1.5rem;">
+                    <input class="name_input" type="text" placeholder="Nombre" required>
+                    <input class="name_input" type="email" placeholder="Correo" required>
+                </div>
+                <input class="asunto_input" type="text" placeholder="Asunto" required>
+                <textarea class="text_input" type="text" placeholder="Escribe tu mensaje..." required></textarea>
+                <button class="button_form">ENVIAR</button>
+            </form>
+            <div class="info_container">
+                <p>TELEFONOS</p>
+                <p style="margin-bottom: 0.1rem;">8888-8888</p>
+                <p style="margin-bottom: 1.7rem;">7777-7777</p>
+                <p>DIRECCION</p>
+                <p style="margin-bottom: 0.1rem;">xxxxxxxxxxxxxxxxxxxxx</p>
+                <p style="margin-bottom: 1.7rem;">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+                <p>HORAS DE ATENCION</p>
+                <p style="margin-bottom: 0.1rem;">Lunes - Viernes: 7am - 6pm</p>
+                <p style="margin-bottom: 0.1rem;">Sábados: 7am - 1pm</p>
+                <p style="margin-bottom: 1.7rem;">Domingos: cerrado.</p>
+                <div class="social_container">
+                    <a href=""><img class="social_img" src="img/instagram.png" alt=""></a>
+                    <a href=""><img class="social_img" src="img/facebook.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
+
 </html>
