--- a/about_us.html
+++ b/about_us.html
@@ -6,19 +6,28 @@
     <link rel="stylesheet" href="css/main.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>INICIO</title>
+    <title>QUIENES SOMOS</title>
 </head>
 
 <body>
     <header>
 
-        <div class="top_bar col-12"></div>
+        <div class="top_bar col-12">
+		
+			<ul>
+			
+				<li><a href="https://www.instagram.com/clarity3d/" target="_blank"><img src="img/icons/instagram_white-01.png" alt=""></a></li>
+				<li><a href="https://www.facebook.com/Clarity-3D-257069535206410" target="_blank"><img src="img/icons/facebook_white-02.png" alt=""></a></li>
+				
+			</ul>
+			
+		</div>
 
         <div class="bottom_bar col-12">
 
             <div class="logo_area col-3">
 
-                <img src="img/logo.png" alt="logo">
+                <img src="img/logos/logo.png" alt="logo">
 
             </div>
             <div id="l_menu_area" class="menu_area col-9">
@@ -29,7 +38,7 @@
                 <a class="btn_servicios" href="services.html">
                     <h6>SERVICIOS</h6>
                 </a>
-                <a class="btn_quienes_somos" href="about_us.html">
+                <a class="btn_quienes_somos blue" href="about_us.html">
                     <h6>QUIENES SOMOS</h6>
                 </a>
                 <a class="btn_preguntas hide" href="">
@@ -70,8 +79,6 @@
     </header>
 
     <div id="about_us_section">
-        <img class="w-100 background" src="img/asset_1.jpg" alt="background">
-        <div class="w-100 white_filter"></div>
         <div id="text_container">
             <h1 class="about_us_title">Quiénes Somos</h1>
             <p class="about_us_text">Clarity es un laboratorio de Radiología, dedicado al empleo de tecnología avanzada en el procesado de imágenes, con inteligencia artificial (Synapse 3D). Se obtienen reconstrucciones tridimensionales impecables, logrando separar los órganos
@@ -80,8 +87,26 @@
                 la enfermedad y la anatomía por parte del medico tratante, sea para cirugía o seguimiento.
                 <br> Nuestro equipo esta conformado por médicos especialistas con gran expertise en su campo, así como tecnólogos familiarizados con el manejo avanzado de imágenes. Nuestra meta es poner al alcance de los pacientes tecnología de punta
                 para mejorar el manejo por parte del medico tratante.</p>
+			<br>
+			<br>
+			<h3>Nota:</h3>
+			<p class="about_us_text">Clarity no realiza estudios radiológicos, se encarga de procesar las imágenes obtenidas previamente de TC (tomografia computada-TAC) o RM (resonancia magnética). El resultado de las reconstrucciones puede variar según la calidad de las imágenes aportadas por el paciente (factores técnicos como el grosor de corte es decir lo fino del estudio, o las fases del contraste inyectado). Dependiendo de el análisis que se nos solicite puede ser necesario pedir otras fases o estudios.</p>
+			<br>
+			<h3 class="text-center">Contáctenos y con gusto le asesoramos.</h3>
         </div>
     </div>
+	<footer>
+	
+		<h4>SIGUENOS</h4>
+		<br>
+		<ul>
+			<li><a href="https://www.instagram.com/clarity3d/" target="_blank"><img src="img/icons/instagram_white-01.png" alt=""></a></li>
+			<li><a href="https://www.facebook.com/Clarity-3D-257069535206410" target="_blank"><img src="img/icons/facebook_white-02.png" alt=""></a></li>	
+		</ul>
+		
+	
+		
+	</footer>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
