--- a/services.html
+++ b/services.html
@@ -14,13 +14,22 @@
 
     <header>
 
-        <div class="top_bar col-12"></div>
+        <div class="top_bar col-12">
+		
+			<ul>
+			
+				<li><a href="https://www.instagram.com/clarity3d/" target="_blank"><img src="img/icons/instagram_white-01.png" alt=""></a></li>
+				<li><a href="https://www.facebook.com/Clarity-3D-257069535206410" target="_blank"><img src="img/icons/facebook_white-02.png" alt=""></a></li>
+				
+			</ul>
+			
+		</div>
 
         <div class="bottom_bar col-12">
 
             <div class="logo_area col-3">
 
-                <img src="img/logo.png" alt="logo">
+                <img src="img/logos/logo.png" alt="logo">
 
             </div>
             <div id="l_menu_area" class="menu_area col-9">
@@ -28,7 +37,7 @@
                 <a class="btn_inicio" href="index.html">
                     <h6>INICIO</h6>
                 </a>
-                <a class="btn_servicios" href="services.html">
+                <a class="btn_servicios blue" href="services.html">
                     <h6>SERVICIOS</h6>
                 </a>
                 <a class="btn_quienes_somos" href="about_us.html">
@@ -97,7 +106,7 @@
                     fases de contraste.</p>
                 <h4 class="info_price">Precio: $100 dolares</h4>
             </div>
-            <img class="service_img" src="img/volumetria_renal_1.png" alt="">
+            <img class="service_img" src="img/services_img/volumetria_hepatica_1.png" alt="">
         </div>
         <div id="volumetria_renal">
             <div class="info_section">
@@ -107,7 +116,7 @@
                     varias fases de contraste.</p>
                 <h4 class="info_price">Precio: $100 dolares</h4>
             </div>
-            <img class="service_img" src="img/volumetria_renal_1.png" alt="">
+            <img class="service_img" src="img/services_img/volumetria_renal_1.png" alt="">
         </div>
         <div id="planeamiento_quirurgico">
             <div class="info_section">
@@ -115,7 +124,7 @@
                 <p class="info-text">En hígado, riñón y pulmón. Uso de software basado en Inteligencia Artificial, para reconocimiento de estructuras anatómicas, poder diferenciar diferentes lesiones y realizar imágenes 3D pudiendo realizar diversas simulaciones de cirugía.</p>
                 <h4 class="info_price">Precio: $100 dolares</h4>
             </div>
-            <img class="service_img" src="img/volumetria_renal_1.png" alt="">
+            <img class="service_img" src="img/services_img/planeamiento_quirurjico_1.png" alt="">
         </div>
         <div id="analisis_pulmonar">
             <div class="info_section">
@@ -125,7 +134,10 @@
                     de enfisema mediante indice de Goddard.</p>
                 <h4 class="info_price">Precio: $100 dolares<br>Cuantificación de enfisema: $50 dolares</h4>
             </div>
-            <img class="service_img" src="img/volumetria_renal_1.png" alt="">
+            <div class="service_img">
+				<img class="w-75" src="img/services_img/analisis_pulmonar_1.png" alt="">
+				<img class="w-75" src="img/services_img/analisis_pulmonar_2.png" alt="">
+			</div>
         </div>
         <div id="seguimiento_oncologico">
             <div class="info_section">
@@ -135,7 +147,7 @@
                     pueden ir agregando nuevos estudios. Los resultados se pueden mostrar en imágenes 3D, y con un reporte del resultado de RECIST que cuantifica los cambios.</p>
                 <h4 class="info_price">Precio: $100 dolares</h4>
             </div>
-            <img class="service_img" src="img/volumetria_renal_1.png" alt="">
+            <img class="service_img" src="img/services_img/seguimiento_oncologico_1.png" alt="">
         </div>
         <div id="postprocesado_vascular">
             <div class="info_section">
@@ -144,10 +156,22 @@
                     planeamiento endovascular.</p>
                 <h4 class="info_price">Precio: $100 dolares</h4>
             </div>
-            <img class="service_img" src="img/volumetria_renal_1.png" alt="">
+            <img class="service_img" src="img/services_img/postprocesado_vascular_1.png" alt="">
         </div>
 
     </div>
+	<footer>
+	
+		<h4>SIGUENOS</h4>
+		<br>
+		<ul>
+			<li><a href="https://www.instagram.com/clarity3d/" target="_blank"><img src="img/icons/instagram_white-01.png" alt=""></a></li>
+			<li><a href="https://www.facebook.com/Clarity-3D-257069535206410" target="_blank"><img src="img/icons/facebook_white-02.png" alt=""></a></li>	
+		</ul>
+		
+	
+		
+	</footer>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
