--- a/index.html
+++ b/index.html
@@ -13,18 +13,27 @@
 
     <header>
 
-        <div class="top_bar col-12"></div>
+        <div class="top_bar col-12">
+		
+			<ul>
+			
+				<li><a href="https://www.instagram.com/clarity3d/" target="_blank"><img src="img/icons/instagram_white-01.png" alt=""></a></li>
+				<li><a href="https://www.facebook.com/Clarity-3D-257069535206410" target="_blank"><img src="img/icons/facebook_white-02.png" alt=""></a></li>
+				
+			</ul>
+			
+		</div>
 
         <div class="bottom_bar col-12">
 
             <div class="logo_area col-3">
 
-                <img src="img/logo.png" alt="logo">
+                <img src="img/logos/logo.png" alt="logo">
 
             </div>
             <div id="l_menu_area" class="menu_area col-9">
 
-                <a class="btn_inicio" href="index.html">
+                <a class="btn_inicio blue" href="index.html">
                     <h6>INICIO</h6>
                 </a>
                 <a class="btn_servicios" href="services.html">
@@ -70,22 +79,32 @@
 
     </header>
 
-    <div id="homepage_carousel" class="carousel slide banner" data-ride="carousel">
+    <div id="homepage_carousel" class="carousel slide carousel-fade banner" data-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel_filter"></div>
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="img/4x/Asset 1.jpg" alt="First slide">
+            <div class="carousel-item first_slide active">
+                <img class="d-block w-100" src="img/banner_assets/picture.png" alt="First slide">
                 <div class="carousel_text">
-                    <h1>LABORATORIO DE RADIOLOGIA CON INTELIGENCIA ARTIFICIAL</h1>
+					<h4>Inteligencia artificial y puesta en práctica en planeamiento de cirugías de alta complejidad</h4>
+					<h1>Dr. Esteban González</h1>
+					<h5>Fecha y hora: 15 de febrero, 2:20 pm.</h5>
+					<h5>Lugar: Simposio de Inteligencia Artificial aplicada a Imágenes Médicas 2019, en el Colegio de Médicos.</h5>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/4x/Asset 1.jpg" alt="Second slide">
+            <div class="carousel-item second_slide">
+                <img class="d-block w-100 " src="img/animations/reconst_torax.gif" alt="Second slide">
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/4x/Asset 1.jpg" alt="Third slide">
+            <div class="carousel-item third_slide">
+                <img class="d-block w-100 " src="img/animations/segmentancion_torax.gif" alt="Third slide">
             </div>
         </div>
+		<a class="carousel-control-prev" href="#homepage_carousel" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#homepage_carousel" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
     </div>
 
     <section id="services_preview">
@@ -358,8 +377,6 @@
     </section>
 
     <div id="about_us_section">
-        <img class="w-100 background" src="img/asset_1.jpg" alt="background">
-        <div class="w-100 white_filter"></div>
         <div id="text_container">
             <h1 class="about_us_title">Quiénes Somos</h1>
             <p class="about_us_text">Clarity es un laboratorio de Radiología, dedicado al empleo de tecnología avanzada en el procesado de imágenes, con inteligencia artificial (Synapse 3D). Se obtienen reconstrucciones tridimensionales impecables, logrando separar los órganos
@@ -368,8 +385,22 @@
                 la enfermedad y la anatomía por parte del medico tratante, sea para cirugía o seguimiento.
                 <br> Nuestro equipo esta conformado por médicos especialistas con gran expertise en su campo, así como tecnólogos familiarizados con el manejo avanzado de imágenes. Nuestra meta es poner al alcance de los pacientes tecnología de punta
                 para mejorar el manejo por parte del medico tratante.</p>
+
         </div>
     </div>
+	
+	<footer>
+	
+		<h4>SIGUENOS</h4>
+		<br>
+		<ul>
+			<li><a href="https://www.instagram.com/clarity3d/" target="_blank"><img src="img/icons/instagram_white-01.png" alt=""></a></li>
+			<li><a href="https://www.facebook.com/Clarity-3D-257069535206410" target="_blank"><img src="img/icons/facebook_white-02.png" alt=""></a></li>	
+		</ul>
+		
+	
+		
+	</footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
